2006-03-20  Julien Puydt  <jpuydt@free.fr>

	* NEWS, configure.in: Fixed compilation issues for opensolaris, thanks
	to Boying Lu (#335196).

2006-03-19  Jan Schampera <jan.schampera@unix.net>

	* NEWS src/gui/config.cpp: Added missing notifiers for "new message"
	sound event (Damien Sandras)

2006-03-19  Damien Sandras  <dsandras@gnome.org>

	* src/gui/accounts.cpp:
	No DNS test on registration. OPAL now provides the full host name on 
	timeouts.

2006-03-19  Damien Sandras  <dsandras@gnome.org>

	* NEWS: Updated with CVS NEWS from 2006-03-19.

2006-03-19  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/sip.cpp:
	Do not release a call done to myself in case of forking.
	Changed timers to RFC3261 compliant values.
	
	* src/endpoints/pcss.cpp:
	Added guards.

	* src/endpoints/manager.cpp:
	Put the GUI in "Connected" mode as soon as media is 
	received/transmitted.
	Fixes #335008.

	* src/devices/audio.cpp:
	ESD sucks.

	* configure.in:
	Back to HEAD.

2006-03-19  Jan Schampera <jan.schampera@unix.net>

	* NEWS src/gui/main.cpp: Added a tooltip for the status text label,
	to get the information also when the text is cut off

2006-03-19  Julien Puydt  <jpuydt@free.fr>

	* NEWS: Added explanation about bug #334685, as requested by Damien :)

2006-03-18  Julien Puydt  <jpuydt@free.fr>

	* src/gui/addressbook.cpp: Fixed #334685.

2006-03-18  Jan Schampera <jan.schampera@unix.net>

	* src/gui/preferences.cpp: Hopefully fix filedialog issues on WIN32
	related to MIME filtering not present

2006-03-18  Julien Puydt  <jpuydt@free.fr>

	* src/gui/addressbook.cpp: Partial fix for bug #334685.

2006-03-16  Vladimer Sichinava <alinux@siena.linux.it>

	* configure.in: added "ka" Georgian entry
	to ALL_LINGUAS.

2006-03-16  Julien Puydt  <jpuydt@free.fr>

	* src/gui/addressbook.cpp: Made some variables more explicit to be
	able to work properly on #334685.

2006-03-14  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Incremented version number to 2.0.1. Incremented