@@ -17,6 +17,7 @@ account. (#335006, Damien Sandras)
 - Prevent the UI from freezing a few micro seconds while registering accounts
 (Damien Sandras)
 - Fixed opensolaris compilation issues (#335196, Boying Lu)
+- Fixed wrong key name in URL handlers section for Gnome (need-terminal --> needs_terminal) (Jan Schampera)
 
 Fixes in OPAL/PWLIB/Ekiga since 2.00 Beta2:
 - Added back StaticPicture in the druid and use the default Ekiga logo
