@@ -1,3 +1,8 @@
+2006-03-20  Jan Schampera <jan.schampera@unix.net>
+
+	* NEWS, src/gui/config.cpp: Fixed wrong key name in URL handlers section
+	for Gnome
+
 2006-03-20  Julien Puydt  <jpuydt@free.fr>
 
 	* NEWS, configure.in: Fixed compilation issues for opensolaris, thanks
